--- a/components/footer/footer.module.css
+++ b/components/footer/footer.module.css
@@ -1,19 +1,7 @@
 .footer {
 	background: #333;
 	border-top: 3px solid #069;
-}
-.footerLinks {
-  float: left;
-  width: 25%;
-  font-size: 13px;
-  line-height: 17px;
-  margin: 20px 0;
-}
-.footerLinks li {
-  margin-bottom: 10px;
-}
-.footerLinks li a {
-  color: #4d4d4d;
+	padding-top: 25px;
 }
 .socialNetwork {
 	text-align: center;
